--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,49 +1,80 @@
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #333;
-    color: #fff;
-    padding: 1rem;
-  }
-  
-  ul {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-  }
-  
-  li {
-    margin-left: 1rem;
-  }
-  
-  a {
-    color: #fff;
+@import url('https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap');
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Play';
+}
+:root{
+  --mainColor:#29335c;
+  --mainColorLight:#5767aa;
+  --secondaryColor:#DB2B39;
+  --textColor:#fff;
+}
+header
+{
+  display: flex;
+  align-items: center;
+   justify-content: space-between;
+   margin:2% 10%;
+   height: 10vh;
+   padding:0 2rem;
+   background-color: var(--mainColor);
+   color:var(--textColor);
+   border-radius: 15px;
+}
+ nav a{
+    margin: 0 2rem;
+    color: var(--textColor);
     text-decoration: none;
-    transition: all 0.3s ease-in-out;
   }
-  
-  a:hover {
-    color: #f00;
+  nav a:hover{
+    color: var(--secondaryColor);
   }
-  
-  @media (max-width: 768px) {
-    nav {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-    
-    ul {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-    
-    li {
-      margin: 0;
-      margin-bottom: 1rem;
-    }
+
+  header .nav-btn
+  {
+    padding: 5px;
+    cursor: pointer;
+    background: transparent;
+    border: none;
+    outline: none;
+    color: var(--textColor);
+    visibility: hidden;
+    opacity: 0;
+    font-size: 1.8rem;
   }
-  
+@media only screen and (max-width:1024px)
+{
+  header .nav-btn
+  {
+    visibility: visible;
+    opacity:1;
+  }
+  header nav {
+    position: fixed;
+    top:2%;
+    left: 10%;
+    height: 40%;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap:1.5 rem;
+    background-color: var(--mainColor);
+    transition: height 3s ;
+    transform: translateY(-100vh);
+    border-radius: 15px;
+  }
+  header .responsive_nav
+  {
+    transform:none ;
+  }
+  nav .nav-close-btn
+  {
+    position: absolute;
+    top:2rem;
+    right:2rem;
+  }
+}
